# Factor_curved_Track

./: .gitignore  CA_states.pkl  CMakeLists.txt  CV_states.pkl  package.xml
app/: test_factor.py  test_factor_graph.cpp
eval_results/: 7帧优化-未使用KF-初始板因子图.txt
include/: mybackend.h  mycommon_include.h  myfrontend.h  myg2o_simple_types.h  mytrk_list.h
include/factor_curved_track/: hungarian.h  myEKF.h  myKF.h  mybackend.h  mycommon_include.h  myframe.h  myfrontend.h  myg2o_simple_types.h  myg2o_types.h  mytrk_list.h
launch/: start_ab3d_trk.launch  start_trk.launch  test_factor.launch
msg/: Detection.msg  Detection_list.msg  Information.msg  Pairs.msg  StampArray.msg
scripts/: CMakeLists.txt  ab3d_data_associate.py  ab3d_dets_trans.py  ab3d_trks_transform.py  box.py  data_associate.py  detections_puber.py  dets_transform.py  dist_metrics.py  kitti_calib.py  kitti_oxts.py  test_factor.py  transform.py  trk_predict_posi.py  trks_transform.py
scripts/track_msgs/msg/: _Detection.py  _Detection_list.py  _Information.py  _Pairs.py  _StampArray.py  _Trk_state_with_ID.py  __init__.py
scripts/track_msgs/srv/: _Data_association.py  _Det_pub.py  _KF_update.py  _Trk_pred.py  _Trk_state_store.py  _Trk_update.py  __init__.py
src/: CMakeLists.txt  factor_manage.cpp  factor_manage_class.cpp  hungrian.cpp  myEKF.cpp  myKF.cpp  mybackend.cpp  myframe.cpp  myfrontend.cpp  mytrk_list.cpp
